Reconstruindo o sistema FAQ

--- a/index.html
+++ b/index.html
@@ -8,33 +8,33 @@
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
   <body>
-        <h1>Lorem Faq</h1>
+      <h1>Lorem FAQ</h1>
+    <details>
+        <summary>Lorem Faq</summary>
+        <ul>
+           <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente laborum delectus impedit optio amet. Ad possimus, maxime excepturi eos neque qui nesciunt suscipit esse labore, culpa velit autem magni iusto.Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias vitae molestiae obcaecati! Delectus facilis excepturi minus aliquid ipsam rem vel ea voluptatibus obcaecati, ratione qui animi repellendus, vitae laudantium culpa.</li>
+        </ul>
+    </details>
 
-        <section>
-            <button class="accordion">Lorem-1</button>
-            <div  class="panel">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia minus iste ullam earum quae sapiente porro officia! Esse autem doloremque, ullam eos dolorum explicabo! Ab ratione temporibus at in incidunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore beatae ipsum quod eveniet inventore repudiandae maxime dolorum praesentium, velit libero esse atque facere animi reiciendis, quis, repellendus accusantium deserunt at. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum, quidem qui aliquam molestias nesciunt fugit, sint officiis cum, modi dolorem quibusdam mollitia! Deleniti natus beatae dolores consequatur quas iste reiciendis. </p>
-            </div>
-            <button class="accordion">Lorem-2</button>
-            <div  class="panel">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia minus iste ullam earum quae sapiente porro officia! Esse autem doloremque, ullam eos dolorum explicabo! Ab ratione temporibus at in incidunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore beatae ipsum quod eveniet inventore repudiandae maxime dolorum praesentium, velit libero esse atque facere animi reiciendis, quis, repellendus accusantium deserunt at. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum, quidem qui aliquam molestias nesciunt fugit, sint officiis cum, modi dolorem quibusdam mollitia! Deleniti natus beatae dolores consequatur quas iste reiciendis. </p>
-            </div>
-            <button class="accordion">Lorem-3</button>
-            <div  class="panel">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia minus iste ullam earum quae sapiente porro officia! Esse autem doloremque, ullam eos dolorum explicabo! Ab ratione temporibus at in incidunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore beatae ipsum quod eveniet inventore repudiandae maxime dolorum praesentium, velit libero esse atque facere animi reiciendis, quis, repellendus accusantium deserunt at. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum, quidem qui aliquam molestias nesciunt fugit, sint officiis cum, modi dolorem quibusdam mollitia! Deleniti natus beatae dolores consequatur quas iste reiciendis. </p>
-            </div>
-            <button class="accordion">Lorem-4</button>
-            <div  class="panel">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia minus iste ullam earum quae sapiente porro officia! Esse autem doloremque, ullam eos dolorum explicabo! Ab ratione temporibus at in incidunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore beatae ipsum quod eveniet inventore repudiandae maxime dolorum praesentium, velit libero esse atque facere animi reiciendis, quis, repellendus accusantium deserunt at. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum, quidem qui aliquam molestias nesciunt fugit, sint officiis cum, modi dolorem quibusdam mollitia! Deleniti natus beatae dolores consequatur quas iste reiciendis. </p>
-            </div>
-            <button class="accordion">Lorem-5</button>
-            <div  class="panel">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia minus iste ullam earum quae sapiente porro officia! Esse autem doloremque, ullam eos dolorum explicabo! Ab ratione temporibus at in incidunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore beatae ipsum quod eveniet inventore repudiandae maxime dolorum praesentium, velit libero esse atque facere animi reiciendis, quis, repellendus accusantium deserunt at. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum, quidem qui aliquam molestias nesciunt fugit, sint officiis cum, modi dolorem quibusdam mollitia! Deleniti natus beatae dolores consequatur quas iste reiciendis. </p>
-            </div>
-            <button class="accordion">Lorem-6</button>
-            <div  class="panel">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia minus iste ullam earum quae sapiente porro officia! Esse autem doloremque, ullam eos dolorum explicabo! Ab ratione temporibus at in incidunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore beatae ipsum quod eveniet inventore repudiandae maxime dolorum praesentium, velit libero esse atque facere animi reiciendis, quis, repellendus accusantium deserunt at. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum, quidem qui aliquam molestias nesciunt fugit, sint officiis cum, modi dolorem quibusdam mollitia! Deleniti natus beatae dolores consequatur quas iste reiciendis. </p>
-            </div>
-        </section>
+    <details>
+        <summary>Lorem Faq</summary>
+        <ul>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente laborum delectus impedit optio amet. Ad possimus, maxime excepturi eos neque qui nesciunt suscipit esse labore, culpa velit autem magni iusto.Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias vitae molestiae obcaecati! Delectus facilis excepturi minus aliquid ipsam rem vel ea voluptatibus obcaecati, ratione qui animi repellendus, vitae laudantium culpa.</li>
+        </ul>
+    </details>
+
+    <details>
+        <summary>Lorem Faq</summary>
+        <ul>
+           <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente laborum delectus impedit optio amet. Ad possimus, maxime excepturi eos neque qui nesciunt suscipit esse labore, culpa velit autem magni iusto.Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias vitae molestiae obcaecati! Delectus facilis excepturi minus aliquid ipsam rem vel ea voluptatibus obcaecati, ratione qui animi repellendus, vitae laudantium culpa.</li>
+        </ul>
+    </details>
+
+    <details>
+        <summary>Lorem Faq</summary>
+        <ul>
+            <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente laborum delectus impedit optio amet. Ad possimus, maxime excepturi eos neque qui nesciunt suscipit esse labore, culpa velit autem magni iusto.Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias vitae molestiae obcaecati! Delectus facilis excepturi minus aliquid ipsam rem vel ea voluptatibus obcaecati, ratione qui animi repellendus, vitae laudantium culpa.</li>
+        </ul>
+    </details>
   </body>
 </html>
